--- a/Task - OUTSCHOOL/style.css
+++ b/Task - OUTSCHOOL/style.css
@@ -7,6 +7,11 @@
 
 }
 
+body {
+    font-family: 'Poppins';
+    font-weight: 400;
+}
+
 .landingpage {
     height: 100vh;
     width: 100%;
@@ -339,6 +344,7 @@
   grid-template-rows: repeat(2, auto);
   gap: 1.25rem;
   box-sizing: border-box;
+  grid: auto-fit;
 }
 
 .course-card {
